# weave

./: .clang-format  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
benchmarks/: README.md
docs/: README.md
docs/architecture/: ARCHITECTURE.md
docs/examples/: DISPLAY.md
examples/: README.md
github/: README.md
github/workflows/: build.yml
source/: CMakeLists.txt  Info.plist
source/buffer/: CMakeLists.txt
source/buffer/include/weave/buffer/: Buffer.h  Channel.h  Constants.h  InternalData.h  Policy.h  QueueBuffer.h  Reader.h  ReaderAcquirer.h  RingBuffer.h  Slot.h  Traits.h  Writer.h  WriterAcquirer.h
source/buffer/source/: Dummy.cpp  Dummy.h  InternalData.cpp
source/core/: BufferData.cpp  BufferData.h  Builder.cpp  Builder.h  CMakeLists.txt  Constants.h  Dummy.h  Edge.cpp  Edge.h  EdgeDescriptor.h  Graph.cpp  Graph.h  GraphDescriptor.h  Module.cpp  Module.h  Node.cpp  Node.h  NodeDescriptor.h  Utilities.h
source/core/include/weave/core/: Builder.h  Edge.h  EdgeDescriptor.h  Graph.h  GraphDescriptor.h  Node.h  NodeDescriptor.h  Utilities.h
source/error/: CMakeLists.txt
source/error/include/weave/error/: Constants.h  Exception.h  Result.h
source/error/source/: Exception.cpp
source/graph/: CMakeLists.txt
source/graph/include/weave/graph/: Builder.h  Constants.h  Edge.h  EdgeDescriptor.h  Graph.h  GraphDescriptor.h  Node.h  NodeDescriptor.h  Utilities.h
source/logging/: CMakeLists.txt  Logger.cpp
source/logging/include/weave/logging/: Constants.h  Definitions.h  Logger.h  Macros.h
source/logging/source/: Logger.cpp
source/profiling/: CMakeLists.txt  Configuration.h  ConfigurationPrinter.cpp  MetricsCollector.cpp  MetricsContext.cpp  MetricsPrinter.h  MetricsSpan.cpp  TracePrinter.cpp  TracePrinter.h  TraceSpan.cpp
source/profiling/include/weave/profiling/: ConfigurationCollector.h  ConfigurationContext.h  ConfigurationDataBuilder.h  ConfigurationDataNode.h  ConfigurationSerialization.h  Constants.h  FunctionStatistics.h  Hash.h  Macros.h  MetricsCollector.h  MetricsContext.h  MetricsSpan.h  MetricsSpanData.h  TraceCollector.h  TraceContext.h  TraceSpan.h  TraceSpanDataNode.h  constants.h
source/profiling/pending/: ConfigurationGenerator.cpp  ConfigurationGenerator.h  SessionExecutor.cpp  SessionExecutor.h  clientSessionMain.cpp  serverSessionMain.cpp
source/profiling/source/: ConfigurationCollector.cpp  ConfigurationContext.cpp  ConfigurationDataBuilder.cpp  ConfigurationPrinter.cpp  ConfigurationPrinter.h  MetricsCollector.cpp  MetricsContext.cpp  MetricsPrinter.cpp  MetricsPrinter.h  MetricsSpan.cpp  TraceCollector.cpp  TraceContext.cpp  TracePrinter.cpp  TracePrinter.h  TraceSpan.cpp
source/test/: CMakeLists.txt  UserSpecializations.h  testGraph.cpp
source/test/buffer/: Configuration.h  Context.h
source/test/modules/: Capturer.cpp  Capturer.h  Configuration.h  Constants.h  DisplayBridge.cpp  DisplayBridge.h  Displayer.cpp  Displayer.h  Preprocessor.cpp  Preprocessor.h
source/test/utilities/: DisplayBridge.cpp  DisplayBridge.h
source/user/: CMakeLists.txt  dummy.cpp  dummy.h
source/user/include/weave/user/: BufferData.h  ChannelTraits.h  EdgeTraits.h  Module.h  NodeTraits.h  Processor.h  ProcessorTraits.h  RingBufferTraits.h  Slot.h  SlotTraits.h  SynchronizerTraits.h  WorkerTraits.h
source/user/source/: Dummy.cpp
source/utilities/: CMakeLists.txt
source/utilities/include/weave/utilities/: Executable.h  Reflection.h  SignalManager.h
source/utilities/source/: Executable.cpp  SignalManager.cpp
source/worker/: CMakeLists.txt
source/worker/include/weave/worker/: Constants.h  Context.h  Processor.h  Synchronizer.h  Traits.h  Worker.h
source/worker/source/: Processor.cpp
test/: CMakeLists.txt  Info.plist  UserSpecializations.h  testGraph.cpp
test/Specializations/: BufferDataSpecializations.h  ChannelTraitsSpecialization.h  EdgeTraitsSpecialization.h  ModuleSpecialization.h  ModuleSpecializations.h  ProcessorSpecialization.cpp  ProcessorSpecialization.h  ProcessorTraitsSpecialization.h  RingBufferTraitsSpecialization.h  SlotSpecialization.cpp  SlotSpecialization.h  SynchronizerTraitsSpecialization.h
test/buffer/: Configuration.h  Constants.h  Context.h
test/cmake/: FindONNXRuntime.cmake
test/modules/: Capturer.cpp  Capturer.h  ClientReceiver.cpp  ClientReceiver.h  ClientSender.cpp  ClientSender.h  Configuration.h  Constants.h  Context.h  Decoder.cpp  Decoder.h  Displayer.cpp  Displayer.h  Encoder.cpp  Encoder.h  InferenceInputProcessor.cpp  InferenceInputProcessor.h  InferenceModel.cpp  InferenceModel.h  MessageHeader.h  Preprocessor.cpp  Preprocessor.h  ServerReceiver.cpp  ServerReceiver.h  ServerSender.cpp  ServerSender.h
test/slots/: Image.cpp  Image.h  InferenceTensor.cpp  InferenceTensor.h
test/specializations/: ChannelTraitsSpecialization.h  EdgeTraitsSpecialization.h  NodeTraitsSpecialization.h  ProcessorTraitsSpecialization.h  RingBufferTraitsSpecialization.h  SlotSpecialization.cpp  SlotSpecialization.h  SlotTraitsSpecialization.h  SynchronizerTraitsSpecialization.h  WorkerTraitsSpecialization.h
test/streaming/: Configuration.h  Constants.h  NetworkClient.cpp  NetworkClient.h  NetworkServer.cpp  NetworkServer.h  NetworkUtilities.cpp  NetworkUtilities.h  constants.h
test/utilities/: DisplayBridge.cpp  DisplayBridge.h
test/worker/: Context.h
